--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
   <body>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 
-    <h1> Hello world!!! we are developers</h1>
+    <div id="parent title">
+
+    <h1 id="title">freeCodeCamp Survey Form</h1>
+    <p id="description">Thank you for taking the time to help us improve the platform</p>
+
+    </div>
 
     <script  src="js/index.js"></script>
   </body>
