add story 3 and 4

--- a/index.html
+++ b/index.html
@@ -15,6 +15,14 @@
     <p id="description">Thank you for taking the time to help us improve the platform</p>
 
     </div>
+    <div id="form">
+      <form id="survey-form" action="">
+        <label id="name-label" for="name">
+          <h3>Name</h3>
+        </label>
+        <input id="name" type="text" placeholder="Enter your name" required>
+        <label for="email" id="email-label">
+        </form>
 
     <script  src="js/index.js"></script>
   </body>
