--- a/index.html
+++ b/index.html
@@ -22,6 +22,12 @@
         </label>
         <input id="name" type="text" placeholder="Enter your name" required>
         <label for="email" id="email-label">
+          <input type="email" name="" id="email" placeholder="Enter your Email" required>
+          <label for="number" id="number-label">
+              <h3>Age(optional)</h3>
+          </label>
+          <input type="number" name="" id="number" placeholder="Age">
+          
         </form>
 
     <script  src="js/index.js"></script>
