added 6 and 7 and 8

--- a/index.html
+++ b/index.html
@@ -27,6 +27,20 @@
               <h3>Age(optional)</h3>
           </label>
           <input type="number" name="" id="number" placeholder="Age">
+
+          <label for="dropdown">
+            <h3>Which option best describes your current role?</h3>
+          </label>
+          <select name="dropdown" id="dropdown">
+            <option value="none" selected disabled hidden>
+              Select an Option
+            </option>
+            <option value="">Student</option>
+            <option value="">Full Time Job</option>
+            <option value="">Full Time Learner</option>
+            <option value="">Prefer Not To Say</option>
+            <option value="">Other</option>
+          </select>
           
         </form>
 
