--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>Fork Me! FCC: Test Suite Template</title>
+    <title>ANAS and WILL</title>
     <link rel="stylesheet" href="css/style.css">
   </head>
 
@@ -82,7 +82,11 @@
 
           <label for="textarea"><h3>Any comments or suggestions?</h3></label>
           <textarea id="textarea" placeholder="Enter your comment here..."></textarea>
-          
+            <div class="form-group">
+              <button type="submit" id="submit" class="submit-button">
+                Submit
+              </button>
+            </div>
         </form>
 
     <script  src="js/index.js"></script>
